@@ -1,3 +1,4 @@
+
 /*
  * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
  *
@@ -36,58 +37,64 @@ import opengl.*;
 import static jdk.incubator.foreign.CLinker.*;
 import static opengl.glut_h.*;
 
+/**
+ * Requires VM args <code>
+ * -XstartOnFirstThread --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign -Djava.library.path=.:/System/Library/Frameworks/OpenGL.framework/Versions/Current/Libraries/
+ * </code>
+ *
+ */
 public class Teapot {
-    private float rot = 0;
+  private float rot = 0;
 
-    Teapot(SegmentAllocator allocator) {
-        // Reset Background
-        glClearColor(0f, 0f, 0f, 0f);
-        // Setup Lighting
-        glShadeModel(GL_SMOOTH());
-        var pos = allocator.allocateArray(C_FLOAT, new float[] {0.0f, 15.0f, -15.0f, 0});
-        glLightfv(GL_LIGHT0(), GL_POSITION(), pos);
-        var spec = allocator.allocateArray(C_FLOAT, new float[] {1, 1, 1, 0});
-        glLightfv(GL_LIGHT0(), GL_AMBIENT(), spec);
-        glLightfv(GL_LIGHT0(), GL_DIFFUSE(), spec);
-        glLightfv(GL_LIGHT0(), GL_SPECULAR(), spec);
-        var shini = allocator.allocate(C_FLOAT, 113);
-        glMaterialfv(GL_FRONT(), GL_SHININESS(), shini);
-        glEnable(GL_LIGHTING());
-        glEnable(GL_LIGHT0());
-        glEnable(GL_DEPTH_TEST());
-    }
+  Teapot(SegmentAllocator allocator) {
+    // Reset Background
+    glClearColor(0f, 0f, 0f, 0f);
+    // Setup Lighting
+    glShadeModel(GL_SMOOTH());
+    var pos = allocator.allocateArray(C_FLOAT, new float[] { 0.0f, 15.0f, -15.0f, 0 });
+    glLightfv(GL_LIGHT0(), GL_POSITION(), pos);
+    var spec = allocator.allocateArray(C_FLOAT, new float[] { 1, 1, 1, 0 });
+    glLightfv(GL_LIGHT0(), GL_AMBIENT(), spec);
+    glLightfv(GL_LIGHT0(), GL_DIFFUSE(), spec);
+    glLightfv(GL_LIGHT0(), GL_SPECULAR(), spec);
+    var shini = allocator.allocate(C_FLOAT, 113);
+    glMaterialfv(GL_FRONT(), GL_SHININESS(), shini);
+    glEnable(GL_LIGHTING());
+    glEnable(GL_LIGHT0());
+    glEnable(GL_DEPTH_TEST());
+  }
 
-    void display() {
-        glClear(GL_COLOR_BUFFER_BIT() | GL_DEPTH_BUFFER_BIT());
-        glPushMatrix();
-        glRotatef(-20f, 1f, 1f, 0f);
-        glRotatef(rot, 0f, 1f, 0f);
-        glutSolidTeapot(0.5d);
-        glPopMatrix();
-        glutSwapBuffers();
-        
-    }
+  void display() {
+    glClear(GL_COLOR_BUFFER_BIT() | GL_DEPTH_BUFFER_BIT());
+    glPushMatrix();
+    glRotatef(-20f, 1f, 1f, 0f);
+    glRotatef(rot, 0f, 1f, 0f);
+    glutSolidTeapot(0.5d);
+    glPopMatrix();
+    glutSwapBuffers();
 
-    void onIdle() {
-        rot += 0.1;
-        glutPostRedisplay();
-    }
-    
+  }
 
-    public static void main(String[] args) {
-        try (var scope = ResourceScope.newConfinedScope()) {
-            var allocator = SegmentAllocator.ofScope(scope);
-            var argc = allocator.allocate(C_INT, 0);
-            glutInit(argc, argc);
-            glutInitDisplayMode(GLUT_DOUBLE() | GLUT_RGB() | GLUT_DEPTH());
-            glutInitWindowSize(500, 500);
-            glutCreateWindow(CLinker.toCString("Hello Panama!", scope));
-            var teapot = new Teapot(allocator);
-            var displayStub = glutDisplayFunc$func.allocate(teapot::display, scope);
-            var idleStub = glutIdleFunc$func.allocate(teapot::onIdle, scope);
-            glutDisplayFunc(displayStub);
-            glutIdleFunc(idleStub);
-            glutMainLoop();
-        }
+  void onIdle() {
+    rot += 0.1;
+    glutPostRedisplay();
+    //throw new IllegalArgumentException("Teapot does not support coffee");
+  }
+
+  public static void main(String[] args) {
+    try (var scope = ResourceScope.newConfinedScope()) {
+      var allocator = SegmentAllocator.ofScope(scope);
+      var argc = allocator.allocate(C_INT, 0);
+      glutInit(argc, argc);
+      glutInitDisplayMode(GLUT_DOUBLE() | GLUT_RGB() | GLUT_DEPTH());
+      glutInitWindowSize(500, 500);
+      glutCreateWindow(CLinker.toCString("Hello Panama!", scope));
+      var teapot = new Teapot(allocator);
+      var displayStub = glutDisplayFunc$func.allocate(teapot::display, scope);
+      var idleStub = glutIdleFunc$func.allocate(teapot::onIdle, scope);
+      glutDisplayFunc(displayStub);
+      glutIdleFunc(idleStub);
+      glutMainLoop();
     }
+  }
 }
